# voidengine

./: .gitignore  Makefile  PLAN.md  README.md  odin.json  shmup  voidengine
docs/: API_REFERENCE.md  TUTORIAL.md
examples/demo/: main.odin
examples/demo/src/: game.odin
examples/puzzle/: main.odin
examples/puzzle/src/: game.odin
examples/shmup/: main.odin
examples/shmup/src/: game.odin
src/: main.odin
src/core/: engine.odin
src/engine/: animation.odin  asset_pipeline.odin  atlas_font.odin  audio.odin  build.odin  camera.odin  config.odin  debug_console.odin  debug_overlay.odin  engine.odin  error.odin  input.odin  log.odin  math.odin  package_manager.odin  particle.odin  physics.odin  profiler.odin  renderer.odin  save.odin  state.odin  tilemap.odin
studio/: .gitignore  README.md  package-lock.json  package.json
studio/src/: App.css  App.tsx
studio/src-tauri/: Cargo.toml  tauri.conf.json
studio/src-tauri/capabilities/: default.json
studio/src-tauri/src/: commands.rs  lib.rs
tests/: test_animation.odin  test_build.odin  test_camera.odin  test_config.odin  test_engine.odin  test_error.odin  test_log.odin  test_math.odin  test_particle.odin  test_physics.odin  test_save.odin  test_state.odin
