[package]
name = "voidengine-studio"
version = "0.3.0"
description = "VoidEngine Studio — build and test games"
authors = ["synthalorian"]
license = "MIT"
repository = "https://github.com/synthalorian/voidengine"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["process", "io-util", "sync", "rt-multi-thread"] }
